# stellar-wrap-contract

./: .gitignore  .mutants.toml  Cargo.toml  Dockerfile  ERRORS.md  Makefile  README.md  SECURITY_RECOMMENDATIONS.md  test_results.txt
.github/workflows/: ci.yml  deploy-testnet.yml  mutation.yml  release.yml
src/: constants.rs  lib.rs  prop_test.rs  security_test.rs  storage_types.rs  test.rs
test_snapshots/test/: test_admin_can_add_and_remove_archetype.1.json  test_allowed_archetypes_initialized.1.json  test_duplicate_period_fails.1.json  test_initialize_twice_fails.1.json  test_invalid_archetype_rejected.1.json  test_mint_emits_event.1.json  test_minting_flow.1.json
tests/: integration_testnet.sh
